--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <style>
         body {
             font-family: Arial, sans-serif;
+            color: #fff;
+            background-color: #000;
             margin: 0;
             padding: 20px;
         }
@@ -29,7 +31,7 @@
             background-color: #007bff;
             color: #fff;
             border: none;
-            border-radius: 20%;
+            border-radius: 10%;
             font-weight: 800;
             cursor: pointer;
         }
