--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         #url-input {
             width: 100%;
             font-size: 16px;
+            color: #fff;
             margin-bottom: 10px;
         }
         #play-button {
