--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         #url-input {
             width: 100%;
             font-size: 16px;
-            color: #fff;
+            color: #007bff;
             margin-bottom: 10px;
         }
         #play-button {
