--- a/index.html
+++ b/index.html
@@ -27,23 +27,23 @@
             margin-bottom: 10px;
         }
         #play-button {
-            padding: 5px 10px;
-            font-size: 18px;
+            padding: 2px 4px;
+            font-size: 14px;
             background-color: #007bff;
             color: #fff;
             border: none;
             border-radius: 5%;
-            font-weight: 800;
+            font-weight: 600;
             cursor: pointer;
         }
-        #cleartn {
-            padding: 5px 10px;
-            font-size: 18px;
+        #clearBtn {
+            padding: 2px 4px;
+            font-size: 14px;
             background-color: #cf153a;
             color: #fff;
             border: none;
             border-radius: 5%;
-            font-weight: 800;
+            font-weight: 600;
             cursor: pointer;
             margin: 2px 2px 2px 0px;
         }
