--- a/index.html
+++ b/index.html
@@ -10,42 +10,42 @@
             font-family: Arial, sans-serif;
             color: #fff;
             background-color: #000;
-            margin: 0;
-            padding: 20px;
+            margin: 10px;
         }
         #video {
             width: 100%;
-            height: 100vh; /* Corrected typo: 100vh instead of 100dvh */
+            height: 100dvh;
         }
         #video-container {
-            margin-bottom: 20px;
+            margin-bottom: 4px;
         }
         #url-input {
-            width: 100%;
-            font-size: 16px;
-            color: #fff;
+            width: 85%;
+            font-size: 12px;
+            color: #b4b4b4;
+            height: 15px;
             margin-bottom: 4px;
             background-color: #000;
             border: 2px solid #333;
-            border-radius: 6px;
+            border-radius: 5px;
         }
         #play-button, #clearButton {
-            padding: 2px 12px;
-            font-size: 14px;
-            font-weight: 600;
+            font-size: 12px;
+            font-weight: 800;
             cursor: pointer;
         }
         #play-button {
             background-color: #007bff;
             color: #000;
             border: none;
-            border-radius: 5%;
+            border-radius: 50px;
         }
         #clearButton {
-            background-color: #911a32;
+            background-color: #b29;
             color: #fff;
+            padding: 1.5px 14px;
             border: none;
-            border-radius: 5%;
+            border-radius: 50px;
         }
         #clearButton:hover,
         #play-button:hover {
@@ -54,14 +54,16 @@
     </style>
 </head>
 <body>
-    <div id="video-container">
-        <video id="video" controls autoplay></video>
+
     </div>
     <input type="text" id="url-input" placeholder="Enter HLS Video URL...">
     <button id="play-button" onclick="playVideo()">PLAY</button>
     <button id="clearButton" onclick="clearInput()">✖️</button>
+    <div id="video-container">
+        <video id="video" controls autoplay></video>
+    <iframe src="https://iptv-org.github.io" style="border:2px #444 solid;" scrolling="yes" frameborder="1" marginheight="5px" marginwidth="5px" height="50%" width="100%" allowfullscreen></iframe>
 
-    <script>
+<script>
         var video = document.getElementById('video');
         var urlInput = document.getElementById('url-input');
         var hls;
@@ -134,6 +136,6 @@
                 arrowRightPressed = false;
             }
         });
-    </script>
+</script>
 </body>
 </html>
