--- a/pc.html
+++ b/pc.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nihar's HLS Player</title>
+    <title>Nihar's HLS Player (PC)</title>
     <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
     <style>
         body {
@@ -20,31 +20,30 @@
             margin-bottom: 4px;
         }
         #url-input {
-            width: 85%;
-            font-size: 12px;
+            width: 80%;
             color: #b4b4b4;
-            height: 15px;
+            height: 20px;
             margin-bottom: 4px;
             background-color: #000;
             border: 2px solid #333;
             border-radius: 5px;
         }
         #play-button, #clearButton {
-            font-size: 12px;
-            font-weight: 800;
+            font-weight: 1000;
             cursor: pointer;
         }
         #play-button {
             background-color: #007bff;
             color: #000;
             border: none;
+            padding: 7px 14px;
             border-radius: 50px;
         }
         #clearButton {
-            background-color: #b29;
+            background-color: #b1869e;
             color: #fff;
-            padding: 1.5px 14px;
             border: none;
+            padding: 7px 20px;
             border-radius: 50px;
         }
         #clearButton:hover,
