--- a/index.html
+++ b/index.html
@@ -6,34 +6,50 @@
   <meta name="theme-color" content="#444">
   <link rel="icon" sizes="192x192" href="images/skyblue_favicon.png">
   <link rel="stylesheet" href="style.css">
-  <title>Nihar's Sites</title>
+  <title>Nihar's Websites</title>
 </head>
 <style>
   body {
     color: #fff;
     background-color: #000;
-  .links-container {
-    color: #fff;
+    font-family: fantasy, sans-serif;
+     }
+  a:link, a {
     background-color: #333;
-    width: 80%;
-    align: center;
-    align-items: center;
-    
-</style>
-<center>
-    <div class="links-container"></div>
-    <button id="pasteCopyButton" onclick="handleButtonClick(); showAlert()">🗒</button>
-    <input type="text" placeholder="Enter Download Link..." id="vid" name="vid" autocomplete="off" maxlength="10000">
-    <button id="button-play" onclick="play()">PLAY</button>
-    <button id="clearBtn" onclick="document.getElementById('vid').value=''">❌</button>
-    </br>
-</center>
-<div class="box-container" id="boxContainer"></div>
-<div class="input-container">
-  <label for="channelName"></label>
-  <button id="nightModeBtn" onclick="nightModeFunction()">☀️</button>
-<script>
+    color: #fff879;
+    font-family: arial, sans-serif;
+    font-size: 20px;
+    font-weight: 1000;
+    padding: 4px 20px 5px 20px;
+    border-radius: 6px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    }
 
-</script>
-</body>
+    a:hover, {
+      background-color: ; 
+    }
+    h2 {
+      color: #359998;
+      font-size: 30px;
+      font-weight: 100;
+    }
+</style>
+
+<center>
+    
+    <h2>WEBPAGE LINKS</h2>
+    <a href="htps://nrp10.github.io/play">PLAY</a>
+    <p><a href="code.html">Live Page Source Code Editor</a></p>
+    <p><a href="tv.html">TV For Android Web</a></p>
+    <p><a href="tv-pc.html">HLS Player For PC</a></p>
+    <p><a href="note.html">Keep Notes</a></p>
+    <p><a href=".html">Text Reader</a></p>
+    <p><a href=".html"></a></p>
+    <p><a href=".html"></a></p>
+ 
+</center>
+
+</body> 
 </html>
