--- a/index.html
+++ b/index.html
@@ -40,15 +40,13 @@
 <center>
     
     <h2>WEBPAGE LINKS</h2>
-    <a href="htps://nrp10.github.io/play">PLAY</a>
+    <a href="https://nrp10.github.io/play">PLAY</a>
     <p><a href="code.html">Live Page Source Code Editor</a></p>
     <p><a href="tv.html">TV For Android Web</a></p>
     <p><a href="tv-pc.html">HLS Player For PC</a></p>
-    <p><a href="note.html">Keep Notes</a></p>
-    <p><a href=".html">Text Reader</a></p>
-    <p><a href=".html"></a></p>
-    <p><a href=".html"></a></p>
- 
+    <p><a href="text.html">Text Reader</a></p>
+    <p><a href="note.html">Kep Notes</a></p>
+  
 </center>
 
 </body> 
