--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <p><a href="mobtv.html">TV For Android Web</a></p>
     <p><a href="tv-pc.html">HLS Player For PC</a></p>
     <p><a href="text.html">Text Reader</a></p>
-    <p><a href="note.html">Keep Notes</a></p>
+    <p><a href="note">Keep Notes</a></p>
   
 </center>
 
