--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
     
     <h2>WEBPAGE LINKS</h2>
     <a href="https://nrp10.github.io/play">PLAY</a>
-    <p><a href="code.html">Live Page Source Code Editor</a></p>
-    <p><a href="mobtv.html">TV For Android Web</a></p>
-    <p><a href="tv-pc.html">HLS Player For PC</a></p>
-    <p><a href="text.html">Text Reader</a></p>
+    <p><a href="code">Live Page Source Code Editor</a></p>
+    <p><a href="mobtv">TV For Android Web</a></p>
+    <p><a href="pctv">HLS Player For PC</a></p>
+    <p><a href="text">Text Reader</a></p>
     <p><a href="note">Keep Notes</a></p>
   
 </center>
