--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     display: inline-block;
     }
 
-    a:hover, {
-      background-color: #000; 
+    a:hover {
+      background-color: #222;  
     }
     h2 {
       color: #359998;
