--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <a href="https://nrp10.github.io/play">PLAY</a>
     <p><a href="code">Live Page Source Code Editor</a></p>
     <p><a href="mobtv">TV For Android Web</a></p>
-    <p><a href="pctv">HLS Player For PC</a></p>
+    <p><a href="hls">HLS Player For PC</a></p>
     <p><a href="text">Text Reader</a></p>
     <p><a href="note">Keep Notes</a></p>
   
