--- a/tv.html
+++ b/tv.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nihar's HLS Player (M)</title>
+    <title>Nihar's TV Player</title>
     
     <style>
         body {
@@ -59,9 +59,10 @@
     <input type="text" id="url-input" placeholder="Enter HLS/M3U8 Video URL...">
     <button id="play-button" onclick="play()">PLAY</button>
     <button id="clearButton" onclick="document.getElementById('url-input').value=''">✖️</button>
+    <!--
     <iframe src="https://iptv-org.github.io" style="border:2px #444 solid;" scrolling="yes" frameborder="1" marginheight="2px" marginwidth="2px" height="600vh" width="100%" allowfullscreen></iframe>
 <script>
-    
+    -->
 // Paste link and PLAY button function
 async function play() {
     var qry = document.getElementById("url-input").value.trim();
