--- a/tv.html
+++ b/tv.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nihar's TV Player</title>
+    <title>Nihar's TV Stream</title>
     
     <style>
         body {
