--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <h2>WEBPAGE LINKS</h2>
     <a href="https://nrp10.github.io/play">PLAY</a>
     <p><a href="code">Live Page Source Code Editor</a></p>
-    <p><a href="mobtv">TV For Android Web</a></p>
+    <p><a href="tv">TV For Android Web</a></p>
     <p><a href="hls">HLS Player For PC</a></p>
     <p><a href="text">Text Reader</a></p>
     <p><a href="note">Keep Notes</a></p>
