--- a/code.html
+++ b/code.html
@@ -10,7 +10,7 @@ var editboxHTML =
 '<head>' +
 '<style type="text/css">' +
 '.expand { width: 100%; height: 100%; }' +
-'.close { border: none; font-size: 8px; color: #fff; margin: 0px; padding: 0px; }' +
+'.close { border: none; font-size: 100%; color: #fff; margin: 0px; padding: 0px; }' +
 'html,body { overflow: hidden; }' +
 '<\/style>' +
 '<\/head>' +
