--- a/code.html
+++ b/code.html
@@ -22,7 +22,7 @@ var editboxHTML =
 '<\/body>' +
 '<\/html>';
 // The "\n\n\n\n" codes in the "iframe" code are there to increase space for easily pasting URLs.
-var defaultStuff = '\n\n<iframe src="https://\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n"style="border:none;" height="235px" width="345px"></iframe>';
+var defaultStuff = '\n\n<iframe src="https://\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n"style="border:none;" height="235px" width="345px"></iframe>';
 var extraStuff = '<div style="position:absolute; margin:0em; bottom:0em; right:0em;"><small>\n  <\/a>.\n<\/small><\/div>';
 var old = '';      
 function init()
