--- a/index.html
+++ b/index.html
@@ -38,12 +38,14 @@
     
     <h2>WEBPAGE LINKS</h2>
     <a href="https://nrp10.github.io/play">PLAY</a>
+    <a href="https://1msg.vercel.app">Cloud Notes</a>
     <p><a href="code">Live Page Source Code Editor</a></p>
     <p><a href="tv">TV For Android Web</a></p>
     <p><a href="hls">HLS Player For PC</a></p>
+    <p><a href="note">View Cloud Notes</a></p>
+    <p><a href="offnote">Offline Notes</a><p>
     <p><a href="text">Text Reader</a></p>
-    <p><a href="note">Keep Notes</a></p>
-  
+    
 </center>
 
 </body> 
