--- a/offnote.html
+++ b/offnote.html
@@ -24,7 +24,6 @@
   #header-box {
     display: flex;
     flex-direction: row;
-    margin: -20px 0px;
   }
   ::placeholder {
     color: #b4b4b4;
@@ -38,6 +37,9 @@
     cursor: pointer;
     margin-bottom: 10px;
     margin-left: 40vw;
+  }
+  #saveBtn:hover {
+    background-color: dodgerblue;
   }
   h2 {
     margin: 2px;
