--- a/note.html
+++ b/note.html
@@ -25,7 +25,7 @@ body {
     overflow: auto;
     background-color: #111136;
     border: none;
-    color: #b4b4b4;
+    color: #fff;
     border-radius: 6px;
 }
 #getNotes {
