--- a/note.html
+++ b/note.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="utf-8">
   <meta name="theme-color" content="#444">
-  <title>Nihar's Cloud Notes</title>
+  <title>View Cloud Notes</title>
 </head>
 <style>
 body {
@@ -88,7 +88,7 @@ function fetchNotes() {
                 let parsedObject = JSON.parse(jsonString);
                 for (const key in parsedObject) {
                     if (parsedObject.hasOwnProperty(key)) {
-                        lines.push(`${index}: ${parsedObject[key]}`);
+                        lines.push(`${index} - ${parsedObject[key]}`);
                     }
                 }
             });
