--- a/note.html
+++ b/note.html
@@ -74,12 +74,7 @@ Keyboard Shortcut: Fetch Notes: "ArrowLeft + ArrowDown"
 
 // Retrive the texts
 function fetchNotes() {
-    fetch(`https://infinite-marten-44102.upstash.io/`, {
-            headers: {
-                Authorization: `Bearer AqxGAAIgcDERzC1gQ7mirZ5rFhmB56tN7R-uu2PRqgo3nIJ11kO5vQ`,
-            },
-            body: '["LRANGE", "Cloud_Message", "0", "-1"]',
-            method: 'POST',
+    fetch(`https://1msg.vercel.app/api/getNote`, {
         })
         .then(response => response.json())
         .then(data => {
@@ -88,7 +83,7 @@ function fetchNotes() {
                 let parsedObject = JSON.parse(jsonString);
                 for (const key in parsedObject) {
                     if (parsedObject.hasOwnProperty(key)) {
-                        lines.push(`${index} - ${parsedObject[key]}`);
+                        lines.push(`${index}. ${parsedObject[key]}`);
                     }
                 }
             });
@@ -101,7 +96,6 @@ function fetchNotes() {
         });
 }
 // fetchNotes();
-
 
 // Keyboard Shortcut for fetching notes.
 let arrowRightPressed = false;
@@ -122,6 +116,7 @@ document.addEventListener("keyup", function(event) {
         arrowRightPressed = false;
     }
 });
+
 </script>
 </body>
 </html> 
