--- a/note.html
+++ b/note.html
@@ -18,8 +18,9 @@ body {
 }
 #textBox {
     width: 96%;
-    height: 80dvh;
+    height: 85dvh;
     padding: 6px;
+    resize: none;
     font-family: sans-serif;
     font-size: 15px;
     overflow: auto;
@@ -73,8 +74,9 @@ Keyboard Shortcut: Fetch Notes: "ArrowLeft + ArrowDown"
 <script>
 
 // Retrive the texts
-function fetchNotes() {
-    fetch(`https://1msg.vercel.app/api/getNote`, {
+  async function fetchNotes() {
+    const response = await fetch(`https://1msg.vercel.app/api/getNote`, {
+        method: 'GET',
         })
         .then(response => response.json())
         .then(data => {
