--- a/note.html
+++ b/note.html
@@ -40,18 +40,6 @@ body {
     padding: 4px 8px;
     margin: 2px 2px 10px 10vw;
 }
-.alert {
-    position: absolute;
-    top: 4vh;
-    left: 50vw;
-    transform: translate(-50%, -50%);
-    background-color: #61691b;
-    color: #000;
-    font-weight: 900;
-    padding: 5px 5px;
-    border: 2px solid #888;
-    border-radius: 5px;
-}
 h2 {
     font-family: cursive, sans-serif;
     font-weight: 900;
@@ -68,7 +56,7 @@ Keyboard Shortcut: Fetch Notes: "ArrowLeft + ArrowDown"
 -->
     <div id="header-box">
     <h2> Nihar's&nbspCloud&nbspNotes <h2>
-    <button id="getNotes" onclick="fetchNotes()">SHOW&nbspNOTES</button>
+    <button id="getNotes" onclick="getNote()">SHOW&nbspNOTES</button>
     </div>
     <textarea id="textBox" readonly></textarea>
 <script>
@@ -97,7 +85,7 @@ Keyboard Shortcut: Fetch Notes: "ArrowLeft + ArrowDown"
             console.error('Error fetching or parsing data:', error);
         });
 }
-// fetchNotes();
+// getNote();
 
 // Keyboard Shortcut for fetching notes.
 let arrowRightPressed = false;
