--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <a href="https://nrp10.github.io/play">PLAY</a>
     <p></p><a href="https://1msg.vercel.app">Cloud Notes</a></p>
     <p><a href="code">Live Page Source Code Editor</a></p>
-    <p><a href="hls">Cloud Notes (GH Pages)</a></p>
+    <p><a href="1msg">Cloud Notes (GH Pages)</a></p>
     <p><a href="hls">HLS Player For PC</a></p>
     <p><a href="note">View Cloud Notes</a></p>
     <p><a href="offnote">Offline Notes</a><p>
