--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <center>
     
     <h2>WEBPAGE LINKS</h2>
-    <a href="https://nrp10.github.io/play">PLAY</a>
+    <a href="https://1nrp.github.io/play">PLAY</a>
     <p></p><a href="https://1msg.vercel.app">Cloud Notes</a></p>
     <p><a href="code">Live Page Source Code Editor</a></p>
     <p><a href="1msg">Cloud Notes (GH Pages)</a></p>
