--- a/text.html
+++ b/text.html
@@ -45,7 +45,7 @@
     border: 2px solid #888;
     border-radius: 10px;
     cursor: pointer;
-    margin-top: 30%;
+    margin-top: 5%;
   }
   #open {
     background-color: #000;
@@ -54,7 +54,7 @@
     border: 2px solid #888;
     border-radius: 10px;
     cursor: pointer;
-    margin-top: 30%;
+    margin-top: 5%;
   }
   h2 {
     position: absolute
@@ -92,10 +92,11 @@
 </head>
 <body>
 <button id="brightModeBtn" onclick="brightModeFunction()">☀️</button>
-<h2> The only thing that you absolutely have to know, is the location of the library. <h2><h3>- Albert Einstein<h3>
+<h2> The only thing that you absolutely have to know, is the location of the library. <h2><h3>- Albert Einstein <h3>
 <h2> I constantly see people rise in life who are not the smartest, sometimes not even the most diligent, but they are learning machines. <h2>
-<h2> Nothing has served me better in my long life than continuous learning. <h2><h3>- Charles Thomas Munger<h3>
+<h2> Nothing has served me better in my long life than continuous learning. <h2><h3>- Charles Thomas Munger <h3>
 
+<h2> People think focus means saying yes to the thing you've got to focus on. But that's not what it means at all. It means saying no to the hundred other good ideas that there are. You have to pick carefully. I'm actually as proud of the things we haven't done as the things I have done. Innovation is saying no to 1,000 things. <h2><h3>- Steven Paul Jobs <h3>
 <div id="container">
   <div id="fileInput">
     <input type="file" id="fileUploader" accept=".txt">
