--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       background-color: #222;  
     }
     h2 {
-      color: #359998;
+      color: #349998;
       font-size: 30px;
       font-weight: 100;
     }
@@ -37,7 +37,7 @@
 <center>
     
     <h2>WEBPAGE LINKS</h2>
-    <a href="https://1nrp.github.io/play">PLAY</a>
+    <a href="https://1nrp.github.io/vid">PLAY</a>
     <p></p><a href="https://1msg.vercel.app">Cloud Notes</a></p>
     <p><a href="code">Live Page Source Code Editor</a></p>
     <p><a href="1msg">Cloud Notes (GH Pages)</a></p>
