--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
      }
   a:link, a {
     background-color: #444;
-    color: #fff879;
+    color: #fff111;
     font-family: arial, sans-serif;
     font-size: 20px;
     font-weight: 1000;
@@ -25,7 +25,7 @@
     }
 
     a:hover {
-      background-color: #222;  
+      background-color: dodgerblue;  
     }
     h2 {
       color: #349998;
