--- a/offnote.html
+++ b/offnote.html
@@ -49,14 +49,14 @@
   }
   .alert {
     position: absolute;
-    top: 4vh;
+    top: 80vh;
     left: 55vw;
     transform: translate(-50%, -50%);
-    background-color: #283555;
-    color: #fff;
+    background-color: #fff;
+    color: #4f4f;
     padding: 5px 5px;
-    border: 2px solid #999;
-    border-radius: 5px;
+    border: 4px solid #bffa30;
+    border-radius: 50%;
   }
 </style>
 </head>
