--- a/offnote.html
+++ b/offnote.html
@@ -52,10 +52,12 @@
     top: 80vh;
     left: 55vw;
     transform: translate(-50%, -50%);
-    background-color: #fff;
-    color: #4f4f;
-    padding: 5px 5px;
-    border: 4px solid #bffa30;
+    background-color: #fff111;
+    color: #000;
+    font-weight: 1000;
+    font-size: 24px;
+    padding: 10px 10px;
+    border: 8px solid #000;
     border-radius: 50%;
   }
 </style>
