--- a/1msg.html
+++ b/1msg.html
@@ -264,7 +264,7 @@ function notFoundAlert() {
                     }
                 }
             });
-            const result = lines.join('\n⭕⭕⭕⭕⭕⭕⭕⭕⭕⭕⭕⭕⭕⭕⭕⭕⭕\n');
+            const result = lines.join('\n=-=-=-=-=-==-=-=-=-=-==-=-=-=-=-==-=-=-=-=-=-=-=-=-=\n');
             const textbox = document.getElementById('textBox');
             textbox.value = result;
         })
@@ -303,8 +303,8 @@ function pasteLineText(event) {
     var textBox = document.getElementById('textBox');
     var text = textBox.value;
     var cursorPosition = textBox.selectionStart; // Get cursor position
-    var startOfLine = text.lastIndexOf('\n⭕⭕⭕⭕⭕⭕⭕⭕⭕⭕⭕⭕⭕⭕⭕⭕⭕\n', cursorPosition - 1); // Find the start of the line
-    var endOfLine = text.indexOf('\n⭕⭕⭕⭕⭕⭕⭕⭕⭕⭕⭕⭕⭕⭕⭕⭕⭕\n', cursorPosition); // Find the end of the line
+    var startOfLine = text.lastIndexOf('\n=-=-=-=-=-==-=-=-=-=-==-=-=-=-=-==-=-=-=-=-=-=-=-=-=\n', cursorPosition); // Find the start of the line
+    var endOfLine = text.indexOf('\n=-=-=-=-=-==-=-=-=-=-==-=-=-=-=-==-=-=-=-=-=-=-=-=-=\n', cursorPosition); // Find the end of the line
 
     // If no line break is found before the cursor position, start of the text
     if (startOfLine === -1) {
