--- a/1msg.html
+++ b/1msg.html
@@ -263,7 +263,7 @@ function notFoundAlert() {
                     }
                 }
             });
-            const result = lines.join('\n=-=-=-=-=-==-=-=-=-=-==-=-=-=-=-==-=-=-=-=-=-=-=-=-=\n');
+            const result = lines.join('\n=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=\n');
             const textbox = document.getElementById('textBox');
             textbox.value = result;
         })
@@ -302,22 +302,23 @@ function pasteLineText(event) {
     var textBox = document.getElementById('textBox');
     var text = textBox.value;
     var cursorPosition = textBox.selectionStart; // Get cursor position
-    var startOfLine = text.indexOf('\n=-=-=-=-=-==-=-=-=-=-==-=-=-=-=-==-=-=-=-=-=-=-=-=-=\n', cursorPosition); // Find the start of the line
-    var endOfLine = text.indexOf('\n=-=-=-=-=-==-=-=-=-=-==-=-=-=-=-==-=-=-=-=-=-=-=-=-=\n', cursorPosition); // Find the end of the line
-
-    // If no line break is found before the cursor position, start of the text
-    if (startOfLine === -1) {
+    // Find the nearest start line before the cursor position
+    var startLine = text.lastIndexOf('\n=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=\n', cursorPosition);
+    // Find the nearest end line after the cursor position
+    var endLine = text.indexOf('\n=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=\n', cursorPosition);
+    // Adjust start and end positions to get the text between them
+    var startOfLine = startLine + '\n=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=\n'.length;
+    var endOfLine = endLine;
+    // If no start line is found before the cursor position, start from the beginning
+    if (startLine === -1 || cursorPosition < startLine) {
         startOfLine = 0;
-    } else {
-        startOfLine += 2; // Move past the line break
     }
-
-    // If no line break is found after the cursor position, end of the text
-    if (endOfLine === -1) {
+    // If no end line is found after the cursor position, select till the end of text
+    if (endLine === -1 || cursorPosition > endLine) {
         endOfLine = text.length;
     }
     var lineText = text.substring(startOfLine, endOfLine);
-       document.getElementById('deleteBox').value = lineText;
+    document.getElementById('deleteBox').value = lineText;
 }
 document.getElementById('textBox').onclick = pasteLineText;
   
