--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
 <center>
     
     <h2>WEBPAGE LINKS</h2>
-    <a href="https://1nrp.github.io/vid" style="background-color: #000; padding: 20px 60px"></a>
-    <p><a href="https://1msg.vercel.app">Cloud Notes</a></p>
+    <a href="https://1msg.vercel.app">Cloud Notes</a>
     <p><a href="code">Live Page Source Code Editor</a></p>
     <p><a href="1msg">Cloud Notes (GH Pages)</a></p>
     <p><a href="hls">HLS Player For PC</a></p>
     <p><a href="note">View Cloud Notes</a></p>
     <p><a href="offnote">Offline Notes</a><p>
     <p><a href="text">Text Reader</a></p>
+    <p><a href="https://1nrp.github.io/vid" style="background-color: #000; padding: 20px 60px"></a></p>
     
 </center>
 
